--- a/source/less/blocks/order-form.less
+++ b/source/less/blocks/order-form.less
@@ -5,8 +5,8 @@
     width: @tablet-width;
     margin: 0 auto;
     margin-bottom: 63px;
-    padding-right: @mobile-padding;
-    padding-left: @mobile-padding;
+    padding-right: @tablet-padding;
+    padding-left: @tablet-padding;
   }
 
   @media (min-width: @desktop-width) {
@@ -34,10 +34,6 @@
 
   &:last-of-type {
     margin-bottom: 17px;
-  }
-
-  & fieldset {
-    margin-bottom: 33px;
   }
 
   @media (min-width: @tablet-width) {
