--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -1,17 +1,17 @@
 // colors
 @base-black: #000000;
 @base-white: #ffffff;
-@base-green: #63D1BB;
-@base-green-hover: #59D5BC;
-@dark-green: #56C3B2;
-@dark-green-hover: #46C1AE;
-@green-underline: #62D1BA;
-@green-underline-hover: #46C1AE;
-@light-grey: #F1F1F1;
-@lines-grey: #ECECEC;
+@base-green: #63d1bb;
+@base-green-hover: #59d5bC;
+@dark-green: #56c3b2;
+@dark-green-hover: #46c1ae;
+@green-underline: #62d1ba;
+@green-underline-hover: #46c1ae;
+@light-grey: #f1f1f1;
+@lines-grey: #ececec;
 @dark-grey: #444444;
-@base-background: #F9F9F9;
-@base-red: #FF0000;
+@base-background: #f9f9f9;
+@base-red: #ff0000;
 
 // fonts
 @base-font: "Open Sans", "Arial", sans-serif;
