--- a/source/less/blocks/about.less
+++ b/source/less/blocks/about.less
@@ -20,21 +20,53 @@
   height: 100%;
 
   @media (min-width: @tablet-width) {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 304px 304px;
+    column-gap: 30px;
+    row-gap: 57px;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-template-columns: 324px 324px;
   }
 }
 
 .about__item {
+  margin-bottom: 30px;
   padding-top: 55px;
   font-size: 17px;
   font-weight: bold;
   line-height: 20px;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+
+  &--icon-1 {
+    background-image: url("/img/icons/icon-1.svg");
+  }
+
+  &--icon-2 {
+    background-image: url("/img/icons/icon-2.svg");
+  }
+
+  &--icon-3 {
+    background-image: url("/img/icons/icon-3.svg");
+  }
+
+  &--icon-4 {
+    background-image: url("/img/icons/icon-4.svg");
+  }
+
+  &--icon-5 {
+    background-image: url("/img/icons/icon-5.svg");
+  }
+
+  &--icon-6 {
+    background-image: url("/img/icons/icon-6.svg");
+  }
 
   @media (min-width: @tablet-width) {
     width: 334px;
-    padding-right: 30px;
+    margin: 0;
     font-size: 20px;
     line-height: 22px;
 
