--- a/source/less/blocks/fast-links.less
+++ b/source/less/blocks/fast-links.less
@@ -16,6 +16,7 @@
 }
 
 .fast-links__link {
+  position: relative;
   display: block;
   width: @mobile-width;
   margin: 0 auto;
@@ -30,6 +31,39 @@
   color: @base-white;
   text-decoration: none;
 
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    display: block;
+    margin: auto;
+    background-repeat: no-repeat;
+    opacity: 0.5;
+  }
+
+  &--left {
+    background-color: @base-green;
+
+    &::after {
+      right: 6px;
+      width: 40px;
+      height: 62px;
+      background-image: url("/img/icons/interior.svg");
+    }
+  }
+
+  &--right {
+    background-color: @dark-green;
+
+    &::after {
+      right: -4px;
+      width: 60px;
+      height: 60px;
+      background-image: url("/img/icons/toy.svg");
+    }
+  }
+
   @media (min-width: @tablet-width) {
     width: 100%;
     min-height: 119px;
@@ -37,24 +71,28 @@
     padding-bottom: 25px;
     font-size: 20px;
     line-height: 30px;
+
+    &::after {
+      right: 35px;
+    }
   }
 
   @media (min-width: @desktop-width) {
     padding-right: 310px;
   }
-}
 
-.fast-links__link--left {
-  background-color: @base-green;
+  &:hover::after {
+    opacity: 0.7;
+  }
+
+  &:active::after {
+    opacity: 0.3;
+  }
 }
 
 .fast-links__link--left:hover,
 .fast-links__link--left:active {
   background-color: @base-green-hover;
-}
-
-.fast-links__link--right {
-  background-color: @dark-green;
 }
 
 .fast-links__link--right:hover,
