--- a/source/less/blocks/production-process.less
+++ b/source/less/blocks/production-process.less
@@ -29,16 +29,25 @@
   margin-bottom: 26px;
   font-size: 17px;
   line-height: 24px;
+  padding-left: 57px;
+  background-image: url("/img/icons/video.svg");
+  background-repeat: no-repeat;
+  background-size: 32px, 22px;
+  background-position: 0 50%;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 24px;
+    padding-left: 65px;
     font-size: 20px;
   }
 
   @media (min-width: @desktop-width) {
     grid-column: 3 / 4;
+    margin-top: 47px;
     margin-bottom: 27px;
-    padding-top: 96px;
+    padding-top: 49px;
+    padding-left: 0;
+    background-position: 0 0;
   }
 }
 
@@ -69,6 +78,13 @@
   margin-right: @production-padding-mobile * -1;
   margin-left: @production-padding-mobile * -1;
   background-color: @lines-grey;
+  background-image: url("/img/video-mobile-1.jpg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("/img/video-mobile-1@2x.jpg");
+  }
 
   @media (min-width: @tablet-width) {
     order: -1;
@@ -77,19 +93,56 @@
     margin-bottom: 41px;
     margin-right: @producttion-padding-table * -1;
     margin-left: @producttion-padding-table * -1;
+    background-image: url("/img/video-tablet-1.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("/img/video-tablet-1@2x.jpg");
+    }
   }
 
   @media (min-width: @desktop-width) {
     grid-column: 1 / 2;
     grid-row: 1 / 5;
     margin: 0;
+    background-image: url("/img/video-desktop.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("/img/video-desktop@2x.jpg");
+    }
   }
 }
 
 .production-process__button-video {
+  @button-video-width: 100px;
+  @button-video-height: 76px;
+
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: @button-video-width;
+  height: @button-video-height;
+  margin: auto;
+  font-size: 0;
+  line-height: 0;
+  background: none;
+  background-image: url("/img/icons/play.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: 100%;
+  border: none;
+
+  &:hover {
+    width: @button-video-width * 1.2;
+    height: @button-video-height * 1.2;
+  }
+
+  &:active {
+    width: @button-video-width * 0.8;
+    height: @button-video-height * 0.8;
+    opacity: 0.7;
+  }
 }
 
 .production-process__button {
