--- a/source/less/blocks/site-search.less
+++ b/source/less/blocks/site-search.less
@@ -1,4 +1,5 @@
 .site-search__label {
+  position: relative;
   display: block;
   width: @mobile-width;
   margin: 0 auto;
@@ -12,8 +13,13 @@
   text-decoration: none;
 
   @media (min-width: @tablet-width) {
+    width: 100%;
+    min-height: auto;
+    height: 100%;
+    margin: 0 auto;
+    padding: 0;
     font-size: 0;
-    line-height: 88px;
+    line-height: 0;
   }
 
   &:hover {
@@ -22,6 +28,33 @@
 
   &:active {
     color: fade(@base-black, 30%);
+  }
+}
+
+.site-search__icon {
+  position: absolute;
+  top: 32px;
+  left: @mobile-padding;
+  width: 18px;
+  height: 18px;
+  opacity: 0.2;
+
+  @media (min-width: @tablet-width) {
+    top: 0;
+    bottom: 0;
+    margin: auto;
+  }
+
+  .site-search__label:hover & path {
+    fill: @base-green;
+  }
+
+  .site-search__label:hover & {
+    opacity: 1;
+  }
+
+  .site-search__label:active & {
+    opacity: 0.3;
   }
 }
 
