Заершит адаптив по Pixel Perfect

--- a/source/less/blocks/about.less
+++ b/source/less/blocks/about.less
@@ -5,6 +5,7 @@
   line-height: 30px;
 
   @media (min-width: @tablet-width) {
+    margin-bottom: 42px;
     font-size: 43px;
     line-height: 50px;
   }
@@ -23,16 +24,17 @@
     display: grid;
     grid-template-columns: 304px 304px;
     column-gap: 30px;
-    row-gap: 57px;
+    row-gap: 56px;
   }
 
   @media (min-width: @desktop-width) {
     grid-template-columns: 324px 324px;
+    column-gap: 27px;
   }
 }
 
 .about__item {
-  margin-bottom: 30px;
+  margin-bottom: 28px;
   padding-top: 55px;
   font-size: 17px;
   font-weight: bold;
