--- a/source/less/blocks/fast-links.less
+++ b/source/less/blocks/fast-links.less
@@ -21,7 +21,7 @@
   width: @mobile-width;
   margin: 0 auto;
   min-height: 103px;
-  padding-top: 20px;
+  padding-top: 24px;
   padding-right: 180px;
   padding-bottom: 30px;
   padding-left: @mobile-padding;
@@ -46,7 +46,7 @@
     background-color: @base-green;
 
     &::after {
-      right: 6px;
+      right: 36px;
       width: 40px;
       height: 62px;
       background-image: url("/img/icons/interior.svg");
@@ -57,7 +57,7 @@
     background-color: @dark-green;
 
     &::after {
-      right: -4px;
+      right: 27px;
       width: 60px;
       height: 60px;
       background-image: url("/img/icons/toy.svg");
@@ -69,6 +69,7 @@
     min-height: 119px;
     padding-top: 25px;
     padding-bottom: 25px;
+    padding-left: 36px;
     font-size: 20px;
     line-height: 30px;
 
