--- a/source/less/blocks/page-body.less
+++ b/source/less/blocks/page-body.less
@@ -13,6 +13,7 @@
   min-height: 52px;
   margin: 0;
   padding: 14px;
+  font: inherit;
   font-size: 18px;
   font-weight: bold;
   line-height: 20px;
