--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -16,16 +16,17 @@
   background-color: @base-background;
   background-image: url("/img/backgrounds/hero-mobile@2x\ 1.jpg");
   background-repeat: no-repeat;
-  background-position: 50% 0;
+  background-position: 50% -18px;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 40px;
+    margin-bottom: 52px;
     padding-top: 155px;
     background-image: url("/img/backgrounds/hero-desktop\ 2.jpg");
+    background-position: 50% 0;
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 54px;
+    margin-bottom: 71px;
     background-image: url("/img/backgrounds/hero-desktop\ 1.jpg");
   }
 }
@@ -33,7 +34,7 @@
 .page-main__title {
   margin: 0 auto;
   width: @mobile-width;
-  margin-bottom: 137px;
+  margin-bottom: 119px;
   padding-right: 30px;
   padding-left: 30px;
   font-size: 27px;
@@ -50,7 +51,7 @@
 
   @media (min-width: @desktop-width) {
     width: 700px;
-    margin-bottom: 360px;
+    margin-bottom: 357px;
     font-size: 53px;
     line-height: 57px;
   }
@@ -70,14 +71,14 @@
 }
 
 .page-main__top-sales {
-  margin-bottom: 31px;
+  margin-bottom: 72px;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 56px;
+    margin-bottom: 125px;
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 68px;
+    margin-bottom: 163px;
   }
 }
 
@@ -89,21 +90,21 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 90px;
+    margin-bottom: 86px;
     padding-right: @desktop-custom-padding;
     padding-left: @desktop-custom-padding;
   }
 }
 
 .page-main__reviews {
-  margin-bottom: 38px;
+  margin-bottom: 88px;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 46px;
+    margin-bottom: 139px;
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 71px;
+    margin-bottom: 162px;
     padding-left: @desktop-custom-padding;
   }
 }
