--- a/source/less/blocks/site-nav.less
+++ b/source/less/blocks/site-nav.less
@@ -4,11 +4,10 @@
   @media (min-width: @tablet-width) {
     display: flex;
     flex-wrap: wrap;
-    width: 335px;
+    width: 100%;
   }
 
   @media (min-width: @desktop-width) {
-    width: 419px;
     justify-content: flex-start;
   }
 }
@@ -17,7 +16,7 @@
   box-shadow: 0 1px 0 @lines-grey, inset 0 1px 0 @lines-grey;
 
   @media (min-width: @tablet-width) {
-    padding-right: 34px;
+    padding-right: 37px;
     box-shadow: none;
 
     &:nth-child(even) {
@@ -30,7 +29,7 @@
 
     &:nth-child(even) {
       padding-left: 34px;
-      padding-right: 44px;
+      padding-right: 43px;
     }
   }
 }
