--- a/source/less/blocks/order-form.less
+++ b/source/less/blocks/order-form.less
@@ -1,56 +1,62 @@
 .order-form__header {
-  margin-bottom: 29px;
+  margin-bottom: 27px;
 
   @media (min-width: @tablet-width) {
     width: @tablet-width;
     margin: 0 auto;
-    margin-bottom: 63px;
+    margin-bottom: 9px;
     padding-right: @tablet-padding;
     padding-left: @tablet-padding;
   }
 
   @media (min-width: @desktop-width) {
     width: @desktop-width;
+    margin-bottom: 11px;
     padding-right: @desktop-custom-padding;
     padding-left: @desktop-custom-padding;
   }
 }
 
 .order-form__promo-text {
+  margin: 0;
   padding: 0;
   font-size: 13px;
   line-height: 24px;
   color: @dark-grey;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 62px;
     font-size: 17px;
     line-height: 30px;
   }
 }
 
 .order-form__group {
-  margin-bottom: 33px;
+  margin-bottom: 29px;
 
   &:last-of-type {
-    margin-bottom: 17px;
+    margin-bottom: 13px;
   }
 
   @media (min-width: @tablet-width) {
     margin: 0;
-    padding-top: 50px;
+    padding-top: 51px;
     padding-bottom: 50px;
 
     &:last-of-type {
-      margin-bottom: 3px;
+      margin-bottom: 0;
     }
 
     &:nth-of-type(even) {
       background-color: @light-grey;
     }
+  }
 
-    & fieldset {
-      margin-bottom: 24px;
+  @media (min-width: @desktop-width) {
+    padding-top: 50px;
+    padding-bottom: 50px;
+
+    &:last-of-type {
+      padding-bottom: 48px;
     }
   }
 }
@@ -89,6 +95,9 @@
 }
 
 .order-form__button {
+  font-size: 17px;
+  line-height: 20px;
+
   @media (min-width: @tablet-width) {
     width: 230px;
   }
