--- a/source/less/blocks/production-process.less
+++ b/source/less/blocks/production-process.less
@@ -1,10 +1,10 @@
 @production-padding-mobile: 34px;
-@producttion-padding-table: 42px;
+@producttion-padding-table: 40px;
 
 .production-process {
   padding-top: 21px;
-  padding-right: @production-padding-mobile;
-  padding-left: @production-padding-mobile;
+  padding-right: @production-padding-mobile - 3px;
+  padding-left: @production-padding-mobile - 3px;
   padding-bottom: 33px;
   border: 1px solid @lines-grey;
 
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     padding: 0;
+    padding-bottom: 45px;
     padding-right: @producttion-padding-table;
     padding-left: @producttion-padding-table;
   }
@@ -103,6 +104,7 @@
   @media (min-width: @desktop-width) {
     grid-column: 1 / 2;
     grid-row: 1 / 5;
+    width: 682px;
     margin: 0;
     background-image: url("/img/video-desktop.jpg");
 
