--- a/source/less/blocks/top-sales.less
+++ b/source/less/blocks/top-sales.less
@@ -3,6 +3,7 @@
 
   @media (min-width: @desktop-width) {
     position: relative;
+    padding-top: 5px;
   }
 }
 
@@ -10,18 +11,24 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: top;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 32px;
+    padding-right: 12px;
+  }
 
   @media (min-width: @desktop-width) {
     position: absolute;
     top: 60px;
     z-index: 1;
     justify-content: flex-start;
+    margin-bottom: 0;
   }
 }
 
 .top-sales__title {
   margin: 0;
+  margin-bottom: 5px;
   font-size: 25px;
   line-height: 30px;
   color: @base-black;
@@ -42,10 +49,11 @@
   font-size: 17px;
   line-height: 20px;
   color: @base-green;
+  text-transform: uppercase;
 
   @media (min-width: @tablet-width) {
     width: 100px;
-    margin-top: 8px;
+    margin-top: 5px;
     margin-bottom: 0;
     line-height: 17px;
     text-align: center;
@@ -54,8 +62,9 @@
   @media (min-width: @desktop-width) {
     order: -1;
     width: 175px;
+    margin-top: 9px;
     padding-right: 30px;
-    padding-left: 30px;
+    padding-left: 19px;
   }
 }
 
@@ -64,7 +73,6 @@
 
   @media (min-width: @tablet-width) {
     width: 100%;
-    margin-top: 50px;
     padding-right: 376px;
   }
 
@@ -77,7 +85,7 @@
 
 .top-sales__description {
   margin: 0;
-  margin-bottom: 28px;
+  margin-bottom: 17px;
   line-height: 24px;
 
   @media (min-width: @tablet-width) {
@@ -87,8 +95,8 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 60px;
-    padding-top: 150px;
+    margin-bottom: 59px;
+    padding-top: 149px;
   }
 }
 
@@ -97,11 +105,11 @@
   margin-bottom: 28px;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 52px;
+    margin-bottom: 57px;
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 90px;
+    margin-bottom: 110px;
   }
 }
 
@@ -110,6 +118,16 @@
   padding-top: 10px;
   padding-bottom: 10px;
   border-bottom: 1px solid @lines-grey;
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 5px;
+    padding-top: 0;
+    padding-bottom: 14px;
+  }
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .top-sales__name,
@@ -128,7 +146,7 @@
 
 .top-sales__img {
   width: 260px;
-  margin-bottom: 10px;
+  margin-bottom: 22px;
 
   @media (min-width: @tablet-width) {
     position: absolute;
