Добавит svg спрайт. Добавит стили модального окна

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -154,6 +154,14 @@
     top: 146px;
     margin: 0;
   }
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.4;
+  }
 }
 
 .contacts__button {
