--- a/source/less/blocks/products.less
+++ b/source/less/blocks/products.less
@@ -168,16 +168,17 @@
   background: none;
   border: none;
 
-  & path {
+  & svg {
+    fill: @base-black;
     opacity: 0.2;
   }
 
-  &:hover path {
+  &:hover svg {
     fill: @base-green;
     opacity: 1;
   }
 
-  &:active path {
+  &:active svg {
     opacity: 0.3;
   }
 }
