--- a/source/less/blocks/site-search.less
+++ b/source/less/blocks/site-search.less
@@ -37,6 +37,7 @@
   left: @mobile-padding;
   width: 18px;
   height: 18px;
+  fill: @base-black;
   opacity: 0.2;
 
   @media (min-width: @tablet-width) {
@@ -47,11 +48,8 @@
     margin: auto;
   }
 
-  .site-search__label:hover & path {
-    fill: @base-green;
-  }
-
   .site-search__label:hover & {
+    fill: @base-green;
     opacity: 1;
   }
 
