--- a/source/less/blocks/cart.less
+++ b/source/less/blocks/cart.less
@@ -44,6 +44,7 @@
   left: @mobile-padding;
   width: 21px;
   height: 18px;
+  fill: @base-black;
   opacity: 0.2;
 
   @media (min-width: @tablet-width) {
@@ -54,11 +55,8 @@
     margin-right: 26px;
   }
 
-  .cart__link:hover & path {
-    fill: @base-green;
-  }
-
   .cart__link:hover & {
+    fill: @base-green;
     opacity: 1;
   }
 
